fix bug in ComponentFactory